[gd_scene load_steps=28 format=2]

[ext_resource path="res://worlds/WorldBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://worlds/world1/TowerTiles.tres" type="TileSet" id=2]
[ext_resource path="res://art/backgrounds/portrait.png" type="Texture" id=3]
[ext_resource path="res://art/enemies/spike_column/SpikeColumn.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/enemies/tez/Tez.gd" type="Script" id=5]
[ext_resource path="res://art/breakable-items/jar/items/Coin.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/enemies/tez/TezHead.tscn" type="PackedScene" id=7]
[ext_resource path="res://art/breakable-items/jar/heartjar.tscn" type="PackedScene" id=8]
[ext_resource path="res://art/platforms/pipes/enemyspawner/pipe.png" type="Texture" id=10]
[ext_resource path="res://art/enemies/spikes/Spikes.tscn" type="PackedScene" id=11]
[ext_resource path="res://Spiko-O.tscn" type="PackedScene" id=12]
[ext_resource path="res://art/enemies/gun/Gun.tscn" type="PackedScene" id=13]
[ext_resource path="res://interactive_elements/JumpThruPlatform.tscn" type="PackedScene" id=14]
[ext_resource path="res://art/enemies/tez/bomb.tscn" type="PackedScene" id=15]
[ext_resource path="res://shaders_and_materials/effects/ExplosionParticles.tscn" type="PackedScene" id=16]
[ext_resource path="res://art/enemies/tez/body.png" type="Texture" id=17]
[ext_resource path="res://worlds/world3/FinalBoss.gd" type="Script" id=18]
[ext_resource path="res://worlds/world3/HPlayerFollower.gd" type="Script" id=19]
[ext_resource path="res://game_elements/BossHP.tscn" type="PackedScene" id=20]
[ext_resource path="res://art/Door/box.tscn" type="PackedScene" id=21]
[ext_resource path="res://art/platforms/magic carpet/MagicCarpet.tscn" type="PackedScene" id=22]
[ext_resource path="res://art/backgrounds/youwon/YouWont.tscn" type="PackedScene" id=23]
[ext_resource path="res://art/player/CameraFixer.tscn" type="PackedScene" id=24]
[ext_resource path="res://art/enemies/tez/TezArm.tscn" type="PackedScene" id=26]

[sub_resource type="Animation" id=1]
resource_name = "SlideDoorDown"
tracks/0/type = "value"
tracks/0/path = NodePath("JumpThruPlatform:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 1256, 20 ), Vector2( 1256, 80 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 28 )

[sub_resource type="RectangleShape2D" id=3]

[node name="WorldBase" instance=ExtResource( 1 )]
script = ExtResource( 18 )

[node name="Decor" type="Node2D" parent="." index="2"]

[node name="portrait" type="Sprite" parent="Decor" index="0"]
position = Vector2( 108, 80 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="portrait2" type="Sprite" parent="Decor" index="1"]
position = Vector2( 1432, 80 )
texture = ExtResource( 3 )

[node name="Spikes7" parent="Decor" index="2" instance=ExtResource( 11 )]
position = Vector2( 1278, 136 )

[node name="Spikes8" parent="Decor" index="3" instance=ExtResource( 11 )]
position = Vector2( 1298, 136 )

[node name="Spikes9" parent="Decor" index="4" instance=ExtResource( 11 )]
position = Vector2( 1318, 136 )

[node name="Spikes10" parent="Decor" index="5" instance=ExtResource( 11 )]
position = Vector2( 1338, 136 )

[node name="Spikes11" parent="Decor" index="6" instance=ExtResource( 11 )]
position = Vector2( 1358, 136 )

[node name="Spikes12" parent="Decor" index="7" instance=ExtResource( 11 )]
position = Vector2( 1378, 136 )

[node name="Spikes13" parent="Decor" index="8" instance=ExtResource( 11 )]
position = Vector2( 1396, 136 )

[node name="Spikes14" parent="Decor" index="9" instance=ExtResource( 11 )]
position = Vector2( 1416, 136 )

[node name="Spikes15" parent="Decor" index="10" instance=ExtResource( 11 )]
position = Vector2( 1436, 136 )

[node name="Spikes16" parent="Decor" index="11" instance=ExtResource( 11 )]
position = Vector2( 1456, 136 )

[node name="Spikes17" parent="Decor" index="12" instance=ExtResource( 11 )]
position = Vector2( 1476, 136 )

[node name="Spikes18" parent="Decor" index="13" instance=ExtResource( 11 )]
position = Vector2( 1496, 136 )

[node name="Spikes19" parent="Decor" index="14" instance=ExtResource( 11 )]
position = Vector2( 1514, 136 )

[node name="Spikes20" parent="Decor" index="15" instance=ExtResource( 11 )]
position = Vector2( 1534, 136 )

[node name="Spikes21" parent="Decor" index="16" instance=ExtResource( 11 )]
position = Vector2( 1554, 136 )

[node name="Spikes22" parent="Decor" index="17" instance=ExtResource( 11 )]
position = Vector2( 1574, 136 )

[node name="Spikes23" parent="Decor" index="18" instance=ExtResource( 11 )]
position = Vector2( 1592, 136 )

[node name="BossHP" parent="HUD" index="5" instance=ExtResource( 20 )]
position = Vector2( 202, 32 )

[node name="Player" parent="." index="4"]
position = Vector2( 106, 126 )

[node name="ShakeCamera2D" parent="Player" index="5"]
target = NodePath("../../HPlayerFollower")

[node name="TileMap2" type="TileMap" parent="." index="5"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
collision_layer = 16
format = 1
tile_data = PoolIntArray( -262070, 2, 0, -262069, 2, 0, -262068, 2, 0, -262067, 2, 0, -262066, 2, 0, -196534, 2, 0, -196533, 2, 0, -196532, 2, 0, -196531, 2, 0, -196530, 2, 0, -130998, 2, 0, -130997, 2, 0, -130996, 2, 0, -130995, 2, 0, -130994, 2, 0, -9, 2, 0, -8, 2, 0, -7, 2, 0, -6, 2, 0, -5, 2, 0, -4, 2, 0, -3, 2, 0, -2, 2, 0, -1, 2, 0, -65536, 2, 0, -65535, 2, 0, -65534, 2, 0, -65533, 2, 0, -65532, 2, 0, -65531, 2, 0, -65530, 2, 0, -65529, 2, 0, -65528, 2, 0, -65527, 2, 0, -65526, 2, 0, -65525, 2, 0, -65524, 2, 0, -65523, 2, 0, -65522, 2, 0, -65521, 2, 0, -65520, 2, 0, -65519, 2, 0, -65518, 2, 0, -65517, 2, 0, -65516, 2, 0, -65515, 2, 0, -65514, 2, 0, -65513, 2, 0, -65512, 2, 0, -65511, 2, 0, -65510, 2, 0, -65509, 2, 0, -65508, 2, 0, -65507, 2, 0, -65506, 2, 0, -65505, 2, 0, -65504, 2, 0, -65503, 2, 0, -65502, 2, 0, -65501, 2, 0, -65500, 2, 0, -65499, 2, 0, -65498, 2, 0, -65497, 2, 0, -65496, 2, 0, -65495, 2, 0, -65494, 2, 0, -65493, 2, 0, -65492, 2, 0, -65491, 2, 0, -65490, 2, 0, -65489, 2, 0, -65488, 2, 0, -65487, 2, 0, -65486, 2, 0, -65485, 2, 0, -65484, 2, 0, -65483, 2, 0, -65482, 2, 0, -65481, 2, 0, -65480, 2, 0, -65479, 2, 0, -65478, 2, 0, -65477, 2, 0, -65476, 2, 0, -65475, 2, 0, -65474, 2, 0, -65473, 2, 0, -65472, 2, 0, -65471, 2, 0, -65470, 2, 0, -65469, 2, 0, -65468, 2, 0, -65467, 2, 0, -65466, 2, 0, -65465, 2, 0, -65464, 2, 0, -65463, 2, 0, -65462, 2, 0, -65461, 2, 0, -65460, 2, 0, -65459, 2, 0, -65458, 2, 0, -65457, 2, 0, -65456, 2, 0, -65455, 2, 0, -65454, 2, 0, -65453, 2, 0, -65452, 2, 0, -65451, 2, 0, -65450, 2, 0, -65449, 2, 0, -65448, 2, 0, -65447, 2, 0, -65446, 2, 0, -65445, 2, 0, -65444, 2, 0, -65443, 2, 0, -65442, 2, 0, -65441, 2, 0, -65440, 2, 0, -65439, 2, 0, -65438, 2, 0, -65437, 2, 0, -65436, 2, 0, -65435, 2, 0, -65434, 2, 0, -65433, 2, 0, -65432, 2, 0, -65431, 2, 0, -65430, 2, 0, -65429, 2, 0, -65428, 2, 0, -65427, 2, 0, -65426, 2, 0, -65425, 2, 0, -65424, 2, 0, -65423, 2, 0, -65422, 2, 0, -65421, 2, 0, -65420, 2, 0, -65419, 2, 0, -65418, 2, 0, -65417, 2, 0, -65416, 2, 0, -65415, 2, 0, -65414, 2, 0, -65413, 2, 0, -65412, 2, 0, -65411, 2, 0, -65410, 2, 0, -65409, 2, 0, -65408, 2, 0, -65407, 2, 0, -65406, 2, 0, -65405, 2, 0, 65527, 2, 0, 65528, 2, 0, 65529, 2, 0, 65530, 2, 0, 65531, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 2, 0, 30, 2, 0, 31, 2, 0, 32, 2, 0, 33, 2, 0, 34, 2, 0, 35, 2, 0, 36, 2, 0, 37, 2, 0, 38, 2, 0, 39, 2, 0, 40, 2, 0, 41, 2, 0, 42, 2, 0, 43, 2, 0, 44, 2, 0, 45, 2, 0, 46, 2, 0, 47, 2, 0, 48, 2, 0, 49, 2, 0, 50, 2, 0, 51, 2, 0, 52, 2, 0, 53, 2, 0, 54, 2, 0, 55, 2, 0, 56, 2, 0, 57, 2, 0, 58, 2, 0, 59, 2, 0, 60, 2, 0, 61, 2, 0, 62, 2, 0, 63, 2, 0, 64, 2, 0, 65, 2, 0, 66, 2, 0, 67, 2, 0, 68, 2, 0, 69, 2, 0, 70, 2, 0, 71, 2, 0, 72, 2, 0, 73, 2, 0, 74, 2, 0, 75, 2, 0, 76, 2, 0, 77, 2, 0, 78, 2, 0, 79, 2, 0, 80, 2, 0, 81, 2, 0, 82, 2, 0, 83, 2, 0, 84, 2, 0, 85, 2, 0, 86, 2, 0, 87, 2, 0, 88, 2, 0, 89, 2, 0, 90, 2, 0, 91, 2, 0, 92, 2, 0, 93, 2, 0, 94, 2, 0, 95, 2, 0, 96, 2, 0, 97, 2, 0, 98, 2, 0, 99, 2, 0, 100, 2, 0, 101, 2, 0, 102, 2, 0, 103, 2, 0, 104, 2, 0, 105, 2, 0, 106, 2, 0, 107, 2, 0, 108, 2, 0, 109, 2, 0, 110, 2, 0, 111, 2, 0, 112, 2, 0, 113, 2, 0, 114, 2, 0, 115, 2, 0, 116, 2, 0, 117, 2, 0, 118, 2, 0, 119, 2, 0, 120, 2, 0, 121, 2, 0, 122, 2, 0, 123, 2, 0, 124, 2, 0, 125, 2, 0, 126, 2, 0, 127, 2, 0, 128, 2, 0, 129, 2, 0, 130, 2, 0, 131, 2, 0, 131063, 2, 0, 131064, 2, 0, 131065, 2, 0, 131066, 2, 0, 131067, 2, 0, 131068, 2, 0, 131069, 2, 0, 131070, 2, 0, 131071, 2, 0, 65536, 2, 0, 65574, 2, 0, 65575, 2, 0, 65585, 2, 0, 65586, 2, 0, 65603, 2, 0, 65604, 2, 0, 65605, 2, 0, 65606, 2, 0, 65607, 2, 0, 65608, 2, 0, 65609, 2, 0, 65610, 2, 0, 65611, 2, 0, 65612, 2, 0, 65613, 2, 0, 65614, 2, 0, 65636, 2, 0, 65637, 2, 0, 65638, 2, 0, 65639, 2, 0, 65640, 2, 0, 65657, 2, 0, 65658, 2, 0, 65659, 2, 0, 65660, 2, 0, 65661, 2, 0, 65662, 2, 0, 65663, 2, 0, 65664, 2, 0, 65665, 2, 0, 65666, 2, 0, 65667, 2, 0, 196599, 2, 0, 196600, 2, 0, 196601, 2, 0, 196602, 2, 0, 196603, 2, 0, 196604, 2, 0, 196605, 2, 0, 196606, 2, 0, 196607, 2, 0, 131072, 2, 0, 131110, 2, 0, 131111, 2, 0, 131121, 2, 0, 131122, 2, 0, 131139, 2, 0, 131140, 2, 0, 131141, 2, 0, 131143, 2, 0, 131144, 2, 0, 131145, 2, 0, 131146, 2, 0, 131148, 2, 0, 131149, 2, 0, 131150, 2, 0, 131172, 2, 0, 131173, 2, 0, 131174, 2, 0, 131175, 2, 0, 131176, 2, 0, 131193, 2, 0, 131194, 2, 0, 131195, 2, 0, 131196, 2, 0, 131197, 2, 0, 131198, 2, 0, 131199, 2, 0, 131200, 2, 0, 131201, 2, 0, 131202, 2, 0, 131203, 2, 0, 262135, 2, 0, 262136, 2, 0, 262137, 2, 0, 262138, 2, 0, 262139, 2, 0, 262140, 2, 0, 262141, 2, 0, 262142, 2, 0, 262143, 2, 0, 196608, 2, 0, 196646, 2, 0, 196647, 2, 0, 196729, 2, 0, 196730, 2, 0, 196731, 2, 0, 196732, 2, 0, 196733, 2, 0, 196734, 2, 0, 196735, 2, 0, 196736, 2, 0, 196737, 2, 0, 196738, 2, 0, 196739, 2, 0, 327671, 2, 0, 327672, 2, 0, 327673, 2, 0, 327674, 2, 0, 327675, 2, 0, 327676, 2, 0, 327677, 2, 0, 327678, 2, 0, 327679, 2, 0, 262144, 2, 0, 262265, 2, 0, 262266, 2, 0, 262267, 2, 0, 262268, 2, 0, 262269, 2, 0, 262270, 2, 0, 262271, 2, 0, 262272, 2, 0, 262273, 2, 0, 262274, 2, 0, 262275, 2, 0, 393207, 2, 0, 393208, 2, 0, 393209, 2, 0, 393210, 2, 0, 393211, 2, 0, 393212, 2, 0, 393213, 2, 0, 393214, 2, 0, 393215, 2, 0, 327680, 2, 0, 327801, 2, 0, 327802, 2, 0, 327803, 2, 0, 327804, 2, 0, 327805, 2, 0, 327806, 2, 0, 327807, 2, 0, 327808, 2, 0, 327809, 2, 0, 327810, 2, 0, 327811, 2, 0, 458743, 2, 0, 458744, 2, 0, 458745, 2, 0, 458746, 2, 0, 458747, 2, 0, 458748, 2, 0, 458749, 2, 0, 458750, 2, 0, 458751, 2, 0, 393216, 2, 0, 393254, 0, 0, 393255, 0, 0, 393337, 2, 0, 393338, 2, 0, 393339, 2, 0, 393340, 2, 0, 393341, 2, 0, 393342, 2, 0, 393343, 2, 0, 393344, 2, 0, 393345, 2, 0, 393346, 2, 0, 393347, 2, 0, 524279, 2, 0, 524280, 2, 0, 524281, 2, 0, 524282, 2, 0, 524283, 2, 0, 524284, 2, 0, 524285, 2, 0, 524286, 2, 0, 524287, 2, 0, 458752, 2, 0, 458790, 2, 0, 458791, 2, 0, 458819, 0, 0, 458820, 0, 0, 458821, 0, 0, 458822, 0, 0, 458823, 0, 0, 458824, 0, 0, 458825, 0, 0, 458826, 0, 0, 458827, 0, 0, 458828, 0, 0, 458829, 0, 0, 458830, 0, 0, 458852, 0, 0, 458853, 0, 0, 458854, 0, 0, 458855, 0, 0, 458856, 0, 0, 458873, 2, 0, 458874, 2, 0, 458875, 2, 0, 458876, 2, 0, 458877, 2, 0, 458878, 2, 0, 458879, 2, 0, 458880, 2, 0, 458881, 2, 0, 458882, 2, 0, 458883, 2, 0, 589815, 2, 0, 589816, 2, 0, 589817, 2, 0, 589818, 2, 0, 589819, 2, 0, 589820, 2, 0, 589821, 2, 0, 589822, 2, 0, 589823, 2, 0, 524288, 2, 0, 524326, 2, 0, 524327, 2, 0, 524356, 2, 0, 524357, 2, 0, 524358, 2, 0, 524359, 2, 0, 524360, 2, 0, 524361, 2, 0, 524362, 2, 0, 524363, 2, 0, 524364, 2, 0, 524365, 2, 0, 524366, 2, 0, 524388, 2, 0, 524389, 2, 0, 524390, 2, 0, 524391, 2, 0, 524392, 2, 0, 524409, 2, 0, 524410, 2, 0, 524411, 2, 0, 524412, 2, 0, 524413, 2, 0, 524414, 2, 0, 524415, 2, 0, 524416, 2, 0, 524417, 2, 0, 524418, 2, 0, 524419, 2, 0, 655351, 2, 0, 655352, 2, 0, 655353, 2, 0, 655354, 2, 0, 655355, 2, 0, 655356, 2, 0, 655357, 2, 0, 655358, 2, 0, 655359, 2, 0, 589824, 2, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589854, 0, 0, 589855, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 2, 0, 589863, 2, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0, 589868, 0, 0, 589869, 0, 0, 589870, 0, 0, 589871, 0, 0, 589872, 0, 0, 589873, 0, 0, 589874, 0, 0, 589875, 0, 0, 589876, 0, 0, 589877, 0, 0, 589878, 0, 0, 589879, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0, 589883, 0, 0, 589884, 0, 0, 589885, 0, 0, 589886, 0, 0, 589887, 0, 0, 589888, 0, 0, 589889, 0, 0, 589890, 0, 0, 589891, 0, 0, 589892, 2, 0, 589893, 2, 0, 589894, 2, 0, 589895, 2, 0, 589896, 2, 0, 589897, 2, 0, 589898, 2, 0, 589899, 2, 0, 589900, 2, 0, 589901, 2, 0, 589902, 2, 0, 589903, 0, 0, 589904, 0, 0, 589905, 0, 0, 589906, 0, 0, 589907, 0, 0, 589908, 0, 0, 589909, 0, 0, 589910, 0, 0, 589911, 0, 0, 589912, 0, 0, 589913, 0, 0, 589914, 0, 0, 589915, 0, 0, 589916, 0, 0, 589917, 0, 0, 589918, 0, 0, 589919, 0, 0, 589920, 0, 0, 589921, 0, 0, 589922, 0, 0, 589923, 0, 0, 589924, 2, 0, 589925, 2, 0, 589926, 2, 0, 589927, 2, 0, 589928, 2, 0, 589929, 0, 0, 589930, 0, 0, 589931, 0, 0, 589932, 0, 0, 589933, 0, 0, 589934, 0, 0, 589935, 0, 0, 589936, 0, 0, 589937, 0, 0, 589938, 0, 0, 589939, 0, 0, 589940, 0, 0, 589941, 0, 0, 589942, 0, 0, 589943, 0, 0, 589944, 0, 0, 589945, 2, 0, 589946, 2, 0, 589947, 2, 0, 589948, 2, 0, 589949, 2, 0, 589950, 2, 0, 589951, 2, 0, 589952, 2, 0, 589953, 2, 0, 589954, 2, 0, 589955, 2, 0, 720887, 2, 0, 720888, 2, 0, 720889, 2, 0, 720890, 2, 0, 720891, 2, 0, 720892, 2, 0, 720893, 2, 0, 720894, 2, 0, 720895, 2, 0, 655360, 2, 0, 655361, 2, 0, 655362, 2, 0, 655363, 2, 0, 655364, 2, 0, 655365, 2, 0, 655366, 2, 0, 655367, 2, 0, 655368, 2, 0, 655369, 2, 0, 655370, 2, 0, 655371, 2, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 2, 0, 655378, 2, 0, 655379, 2, 0, 655380, 2, 0, 655381, 2, 0, 655382, 2, 0, 655383, 2, 0, 655384, 2, 0, 655385, 2, 0, 655386, 2, 0, 655387, 2, 0, 655388, 2, 0, 655389, 2, 0, 655390, 2, 0, 655391, 2, 0, 655392, 2, 0, 655393, 2, 0, 655394, 2, 0, 655395, 2, 0, 655396, 2, 0, 655397, 2, 0, 655398, 2, 0, 655399, 2, 0, 655400, 2, 0, 655401, 2, 0, 655402, 2, 0, 655403, 2, 0, 655404, 2, 0, 655405, 2, 0, 655406, 2, 0, 655407, 2, 0, 655408, 2, 0, 655409, 2, 0, 655410, 2, 0, 655411, 2, 0, 655412, 2, 0, 655413, 2, 0, 655414, 2, 0, 655415, 2, 0, 655416, 2, 0, 655417, 2, 0, 655418, 2, 0, 655419, 2, 0, 655420, 2, 0, 655421, 2, 0, 655422, 2, 0, 655423, 2, 0, 655424, 2, 0, 655425, 2, 0, 655426, 2, 0, 655427, 2, 0, 655428, 2, 0, 655429, 2, 0, 655430, 2, 0, 655431, 2, 0, 655432, 2, 0, 655433, 2, 0, 655434, 2, 0, 655435, 2, 0, 655436, 2, 0, 655437, 2, 0, 655438, 2, 0, 655439, 2, 0, 655440, 2, 0, 655441, 2, 0, 655442, 2, 0, 655443, 2, 0, 655444, 2, 0, 655445, 2, 0, 655446, 2, 0, 655447, 2, 0, 655448, 2, 0, 655449, 2, 0, 655450, 2, 0, 655451, 2, 0, 655452, 2, 0, 655453, 2, 0, 655454, 2, 0, 655455, 2, 0, 655456, 2, 0, 655457, 2, 0, 655458, 2, 0, 655459, 2, 0, 655460, 2, 0, 655461, 2, 0, 655462, 2, 0, 655463, 2, 0, 655464, 2, 0, 655465, 2, 0, 655466, 2, 0, 655467, 2, 0, 655468, 2, 0, 655469, 2, 0, 655470, 2, 0, 655471, 2, 0, 655472, 2, 0, 655473, 2, 0, 655474, 2, 0, 655475, 2, 0, 655476, 2, 0, 655477, 2, 0, 655478, 2, 0, 655479, 2, 0, 655480, 2, 0, 655481, 2, 0, 655482, 2, 0, 655483, 2, 0, 655484, 2, 0, 655485, 2, 0, 655486, 2, 0, 655487, 2, 0, 655488, 2, 0, 655489, 2, 0, 655490, 2, 0, 655491, 2, 0, 720967, 2, 0, 720968, 2, 0, 720969, 2, 0, 720970, 2, 0, 720971, 2, 0, 720972, 2, 0, 720973, 2, 0, 720974, 2, 0, 720975, 2, 0, 720976, 2, 0, 720977, 2, 0, 720978, 2, 0, 720979, 2, 0, 720980, 2, 0, 720981, 2, 0, 720982, 2, 0, 720983, 2, 0, 720984, 2, 0, 720985, 2, 0, 720986, 2, 0, 720987, 2, 0, 720988, 2, 0, 720989, 2, 0, 720990, 2, 0, 720991, 2, 0, 720992, 2, 0, 720993, 2, 0, 720994, 2, 0, 720995, 2, 0, 720996, 2, 0, 720997, 2, 0, 720998, 2, 0, 720999, 2, 0, 721000, 2, 0, 721001, 2, 0, 721002, 2, 0, 721003, 2, 0, 721004, 2, 0, 721005, 2, 0, 721006, 2, 0, 721007, 2, 0, 721008, 2, 0, 721009, 2, 0, 721010, 2, 0, 721011, 2, 0, 721012, 2, 0, 721013, 2, 0, 721014, 2, 0, 721015, 2, 0, 721016, 2, 0, 721017, 2, 0, 721018, 2, 0, 721019, 2, 0, 721020, 2, 0, 721021, 2, 0, 721022, 2, 0, 721023, 2, 0, 721024, 2, 0, 721025, 2, 0, 721026, 2, 0, 721027, 2, 0 )

[node name="Tez" type="Node2D" parent="." index="6"]
position = Vector2( 1382, 102 )
script = ExtResource( 5 )
tez_head = ExtResource( 7 )
tez_arm = ExtResource( 26 )
jay = ExtResource( 15 )

[node name="Head" parent="Tez" index="0" instance=ExtResource( 7 )]
position = Vector2( -0.00012207, -40 )
rotation = -1.5708
enabled = false

[node name="LeftArm" parent="Tez" index="1" instance=ExtResource( 26 )]
position = Vector2( -20.0001, -30 )
rotation = -1.5708
enabled = false

[node name="RightArm" parent="Tez" index="2" instance=ExtResource( 26 )]
position = Vector2( 19.9999, -30 )
rotation = -1.5708
enabled = false

[node name="body" type="Sprite" parent="Tez" index="3"]
texture = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="Explosion" parent="Tez" index="4" instance=ExtResource( 16 )]
position = Vector2( 0, -10 )

[node name="TileMap" parent="." index="7"]
visible = false

[node name="coins" type="Node2D" parent="." index="9"]
position = Vector2( 288, 150 )

[node name="Coin" parent="coins" index="0" instance=ExtResource( 6 )]
position = Vector2( -64, -22 )

[node name="Coin2" parent="coins" index="1" instance=ExtResource( 6 )]
position = Vector2( -96, -22 )

[node name="Coin3" parent="coins" index="2" instance=ExtResource( 6 )]
position = Vector2( -128, -22 )

[node name="Coin4" parent="coins" index="3" instance=ExtResource( 6 )]
position = Vector2( 132, -22 )

[node name="Coin5" parent="coins" index="4" instance=ExtResource( 6 )]
position = Vector2( 100, -22 )

[node name="Coin6" parent="coins" index="5" instance=ExtResource( 6 )]
position = Vector2( 68, -22 )

[node name="Gun" parent="." index="10" instance=ExtResource( 13 )]
position = Vector2( 1080, 136 )
direction = Vector2( -1, 0 )
cooldown = 3
add_path = NodePath("..")

[node name="pipe" type="Sprite" parent="Gun" index="3"]
position = Vector2( 4, 2 )
texture = ExtResource( 10 )

[node name="SpikeColumns" type="Node2D" parent="." index="11"]

[node name="SpikeColumn" parent="SpikeColumns" index="0" instance=ExtResource( 4 )]
position = Vector2( 288, 150 )

[node name="SpikeColumn2" parent="SpikeColumns" index="1" instance=ExtResource( 4 )]
position = Vector2( 528, 248 )
oscillate_amt = Vector2( 0, -128 )

[node name="SpikeColumn5" parent="SpikeColumns" index="2" instance=ExtResource( 4 )]
position = Vector2( 706, 150 )

[node name="SpikeColumn6" parent="SpikeColumns" index="3" instance=ExtResource( 4 )]
position = Vector2( 874, 208 )

[node name="SpikeColumn7" parent="SpikeColumns" index="4" instance=ExtResource( 4 )]
position = Vector2( 918, 208 )
time_offset = 0.5

[node name="SpikeColumn8" parent="SpikeColumns" index="5" instance=ExtResource( 4 )]
position = Vector2( 962, 208 )
time_offset = 0.75

[node name="SpikeColumn9" parent="SpikeColumns" index="6" instance=ExtResource( 4 )]
position = Vector2( 1128, 168 )

[node name="Spike-O" parent="SpikeColumns/SpikeColumn9" index="2" instance=ExtResource( 12 )]
position = Vector2( 36, -104 )

[node name="SpikeColumn10" parent="SpikeColumns" index="7" instance=ExtResource( 4 )]
position = Vector2( 1210, 168 )
time_offset = 1.0

[node name="SpikeColumn3" parent="SpikeColumns" index="8" instance=ExtResource( 4 )]
position = Vector2( 482, -84 )
rotation = 3.14159
oscillate_amt = Vector2( 0, 128 )

[node name="SpikeColumn4" parent="SpikeColumns" index="9" instance=ExtResource( 4 )]
position = Vector2( 576, -84 )
rotation = 3.14159
oscillate_amt = Vector2( 0, 128 )

[node name="spikes" type="Node2D" parent="." index="12"]

[node name="Spikes" parent="spikes" index="0" instance=ExtResource( 11 )]
position = Vector2( 1274, 24 )
rotation = 3.14159

[node name="Spikes2" parent="spikes" index="1" instance=ExtResource( 11 )]
position = Vector2( 1294, 24 )
rotation = 3.14159

[node name="Spikes3" parent="spikes" index="2" instance=ExtResource( 11 )]
position = Vector2( 1314, 24 )
rotation = 3.14159

[node name="Spikes7" parent="spikes" index="3" instance=ExtResource( 11 )]
position = Vector2( 600, 134 )
rotation = 4.71239

[node name="Spikes8" parent="spikes" index="4" instance=ExtResource( 11 )]
position = Vector2( 600, 114 )
rotation = 4.71239

[node name="Spikes4" parent="spikes" index="5" instance=ExtResource( 11 )]
position = Vector2( 1334, 24 )
rotation = 3.14159

[node name="Spikes5" parent="spikes" index="6" instance=ExtResource( 11 )]
position = Vector2( 1354, 24 )
rotation = 3.14159

[node name="Spikes6" parent="spikes" index="7" instance=ExtResource( 11 )]
position = Vector2( 1374, 24 )
rotation = 3.14159

[node name="Spikes9" parent="spikes" index="8" instance=ExtResource( 11 )]
position = Vector2( 1394, 24 )
rotation = 3.14159

[node name="Spikes10" parent="spikes" index="9" instance=ExtResource( 11 )]
position = Vector2( 1414, 24 )
rotation = 3.14159

[node name="Spikes11" parent="spikes" index="10" instance=ExtResource( 11 )]
position = Vector2( 1434, 24 )
rotation = 3.14159

[node name="Spikes12" parent="spikes" index="11" instance=ExtResource( 11 )]
position = Vector2( 1454, 24 )
rotation = 3.14159

[node name="Spikes13" parent="spikes" index="12" instance=ExtResource( 11 )]
position = Vector2( 1474, 24 )
rotation = 3.14159

[node name="Spikes14" parent="spikes" index="13" instance=ExtResource( 11 )]
position = Vector2( 1494, 24 )
rotation = 3.14159

[node name="Spikes15" parent="spikes" index="14" instance=ExtResource( 11 )]
position = Vector2( 1514, 24 )
rotation = 3.14159

[node name="Spikes16" parent="spikes" index="15" instance=ExtResource( 11 )]
position = Vector2( 1534, 24 )
rotation = 3.14159

[node name="Spikes17" parent="spikes" index="16" instance=ExtResource( 11 )]
position = Vector2( 1554, 24 )
rotation = 3.14159

[node name="Spikes18" parent="spikes" index="17" instance=ExtResource( 11 )]
position = Vector2( 1574, 24 )
rotation = 3.14159

[node name="Spikes19" parent="spikes" index="18" instance=ExtResource( 11 )]
position = Vector2( 1590, 24 )
rotation = 3.14159

[node name="DestructorPlatform" type="Node2D" parent="." index="13"]
position = Vector2( 1306, 30 )

[node name="JumpThruPlatform2" parent="." index="14" instance=ExtResource( 14 )]
position = Vector2( 622, 74 )
rotation = 1.5708
z_index = -1
on = false
startPos = Vector2( 0, 0 )
endPos = Vector2( 0, 0 )

[node name="SceneAnimations" type="AnimationPlayer" parent="." index="15"]
root_node = NodePath(".")
anims/SlideDoorDown = SubResource( 1 )

[node name="JumpThruPlatform" parent="SceneAnimations" index="0" instance=ExtResource( 14 )]
position = Vector2( 1256, 20 )
rotation = 1.5708
z_index = -1
on = false
startPos = Vector2( 0, 0 )
endPos = Vector2( 0, 0 )

[node name="JumpThruPlatform2" parent="SceneAnimations" index="1" instance=ExtResource( 14 )]
position = Vector2( 1674, 80 )
rotation = 1.5708
z_index = -1
on = false
startPos = Vector2( 0, 0 )
endPos = Vector2( 0, 0 )

[node name="Area2D" type="Area2D" parent="." index="16"]
position = Vector2( 1702, 78 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="HPlayerFollower" type="Node2D" parent="." index="17"]
script = ExtResource( 19 )

[node name="Box" parent="." index="18" instance=ExtResource( 21 )]
visible = false
position = Vector2( 1790, 130 )
target_scene = ExtResource( 23 )
level = 3

[node name="carpet" parent="." index="19" instance=ExtResource( 22 )]
position = Vector2( 1288, 114 )
boss_scene = true

[node name="CameraFixer" parent="." index="20" instance=ExtResource( 24 )]
position = Vector2( 1285, -40 )
min_pos = Vector2( 1336, -136 )
max_pos = Vector2( 1336, -136 )
target = NodePath("..")

[node name="PlayerMoverArea" type="Area2D" parent="." index="21"]
position = Vector2( 1490, -140 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerMoverArea" index="0"]
position = Vector2( 184, -172 )
scale = Vector2( 10, 0.5 )
shape = SubResource( 3 )

[node name="bomb" parent="." index="22" instance=ExtResource( 15 )]
position = Vector2( 390, 92 )

[node name="JumpThruPlatform" parent="." index="24" instance=ExtResource( 14 )]
position = Vector2( 1854, 96 )
startPos = Vector2( 0, 0 )
endPos = Vector2( 0, 0 )

[node name="JumpThruPlatform3" parent="." index="25" instance=ExtResource( 14 )]
position = Vector2( 1750, 76 )
startPos = Vector2( 0, 0 )
endPos = Vector2( 0, 0 )

[node name="HeartJar" parent="." index="26" instance=ExtResource( 8 )]
position = Vector2( 1248, 104.006 )

[connection signal="destroy_arm" from="Tez/Head" to="Tez" method="_on_destroy_arm"]
[connection signal="destroy_arm" from="Tez/LeftArm" to="Tez" method="_on_destroy_arm"]
[connection signal="destroy_arm" from="Tez/RightArm" to="Tez" method="_on_destroy_arm"]
[connection signal="body_entered" from="Area2D" to="Tez" method="entered_final_area"]
[connection signal="body_entered" from="PlayerMoverArea" to="CameraFixer" method="_on_CameraFixerChanger_body_entered"]
